[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#![feature(derive_default_enum)]
[dependencies]
ncurses = "5.101.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
